tests/NormalTests/paczka2/big_fuzzy/45799948.err
Error in line 6: W2ZlrZf47 S799 73,5
Error in line 9: A596 S799 -3,6
Error in line 5: s3o5UCN S327 93,7
Error in line 3: A596 S799 79,4
Error in line 17: W2ZlrZf47 A596 37,9
Error in line 31: SEWjaL7oGR S327 49,22
Error in line 35: A596 S327 36,7
Error in line 29: SEWjaL7oGR S327 12,1
Error in line 54: A596 A467 89,6
Error in line 51: s3o5UCN A596 17,3
Error in line 65: SEWjaL7oGR A5K6 176,6
Error in line 60: W2ZlrZf47 S799 88,2
Error in line 55: A596 A596 95,9
Error in line 67: W2ZlrZf47 S327 68,0
Error in line 77: W2ZlrZf47 S327 0,77
Error in line 75: SEWjaL7oGR S799 26,6
Error in line 74: 30maPb8Kmlb A596 67,3
Error in line 83: A596 A467 56,6
Error in line 85: W2ZlrZf47 S799 65,1
Error in line 96: 30maPb8Kmlb S799 15,3
Error in line 101: SEWjaL7oGR S799 24,6
Error in line 99: dvlrE3 A467 33,7
Error in line 109: A596 A596 -4,5
Error in line 110: AuwC A596 68,0
Error in line 105: A596 A596 70,4
Error in line 125: A596 S327 332,59
Error in line 107: SEWjaL7oGR A467 142,8
Error in line 143: '2ZlrZf47 S799 106,6
Error in line 134: W2ZlrZf47 S799 27,4
Error in line 132: AuwC S327 46,9
Error in line 158: W2ZlrZf47 S327 29,8
Error in line 163: SEWjaL7oGR A5$6 14,5
Error in line 164: SEWjaL7oGR A596 70,6
Error in line 169: SEWjaL7oGR S799 27,8
Error in line 173: dvlrE3 S327 29,4
Error in line 171: SEWjaL7oGR A467 50,8
Error in line 184: s3o5UCN A596 52,0
Error in line 189: AuwC S327 94,4
Error in line 205: 30maPb8Kmlb S799 97,64
Error in line 204: W2ZlrZf47 A596 2,3
Error in line 208: W2ZlrZf47 S799 63,1
Error in line 216: SEWjaL7oGR S327 -4,6
Error in line 203: s3o5UCN S327 60,7
Error in line 223: A596 S327 99,2
Error in line 211: SEWjaL7oGR S327 56,0
Error in line 238: SEWjaL7oGR A467 48,7
Error in line 236: AuwC S799 17,9
Error in line 231: W2ZlrZf47 S327 82,3
Error in line 242: AuwC S327 99,4
Error in line 243: W2ZlrZf47 A467 57,4
